--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/cli": "^10.3.0",
     "@prisma/client": "^5.8.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -33,18 +34,17 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "prisma": "^5.8.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@types/node": "^20.10.6",
     "@types/express": "^4.17.21",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
     "@types/bcrypt": "^5.0.2",
-    "typescript": "^5.3.3",
-    "prisma": "^5.8.0",
     "ts-node": "^10.9.2"
   }
 }
