--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: appointment-backend
     env: node
     buildCommand: npm install && npx prisma generate && npm run build
-    startCommand: npx prisma migrate deploy && npm run start:prod
+    startCommand: npx prisma migrate deploy && node dist/main
     envVars:
       - key: NODE_ENV
         value: production
